tests/invalid/event/data-type-ipv6-shortened.edxml
<?xml version="1.0" encoding="UTF-8"?>
<!--
Testing object value validation, verify
if an IPv6 address which has been shortened is rejected.
-->
<edxml xmlns="http://edxml.org/edxml" version="3.0.0">
  <ontology>
    <objecttypes>
      <objecttype name="a" description="a" display-name-singular="a" display-name-plural="a" version="1" data-type="ip:v6"/>
    </objecttypes>
    <concepts/>
    <eventtypes>
      <eventtype name="a" description="a" display-name-singular="a" display-name-plural="a" summary="a" story="a" version="1">
        <properties>
          <property name="a" object-type="a" description="a" optional="false" multivalued="false" merge="match"/>
        </properties>
        <relations/>
      </eventtype>
    </eventtypes>
    <sources>
      <source uri="/test/" description="a" date-acquired="20000101" version="1"/>
    </sources>
  </ontology>
  <event event-type="a" source-uri="/test/">
    <properties>
      <a>2001:db8::ff00:42:8329</a>
    </properties>
  </event>
</edxml>
